@startuml
'https://plantuml.com/class-diagram

interface Sentido {
    + {abstract} ejecutar(posicion: Posicion): Posicion
}

class Adelante {
    + ejecutar(posicion: Posicion): Posicion
}

class Atras {
    + ejecutar(posicion: Posicion): Posicion
}

class Derecha{
    + ejecutar(posicion: Posicion): Posicion
}

class Izquierda{
    + ejecutar(posicion: Posicion): Posicion
}

Sentido <|.. Adelante
Sentido <|.. Atras
Sentido <|.. Derecha
Sentido <|.. Izquierda

@enduml